manifests/api-service.yaml
#Imperative command to create service to expose frontend deployment 
#kubectl expose deploy api \ --name=api \ --type=LoadBalancer \ --port=80 \ --target-port=8080
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    role: api
spec:
  selector:
    role: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
